Visual fixes on mobile

--- a/public/stylesheets/orderDisplay.css
+++ b/public/stylesheets/orderDisplay.css
@@ -29,7 +29,7 @@
     padding: 0 3.5rem;
     padding-left: 5rem;
 
-    height: 6rem;
+    height: fit-content;
 
     /* background-color: rgba(255, 255, 255, 0.25); */
     background-color: #FAF9F9;
